update and latest tvl added

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
-DATABASE_CONNECTION=
-PORT=
+PORT= # api port
+RPC_URL= # rpc url
+HOST= # postgres host
+DB_PORT=5432
+USER= # postgres user
+PASSWORD= # postgres password
+DATABASE= # postgres database name
