--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "@nestjs/common": "^10.3.10",
     "@nestjs/core": "^10.3.10",
     "@nestjs/platform-express": "^10.3.10",
+    "@nestjs/schedule": "^4.1.0",
     "@solana/spl-governance": "^0.3.28",
     "@solana/web3.js": "^1.95.2",
+    "axios": "^1.7.3",
     "dotenv": "^16.4.5",
-    "node-fetch": "^3.3.2",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
